--- a/front-end/src/UserForm.css
+++ b/front-end/src/UserForm.css
@@ -4,7 +4,6 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
     height: 100vh;
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     background-color: #f5cea6;
@@ -61,7 +60,7 @@
     display: flex;
   }
   
-  .title {
+  .formtitle {
     font-size: 30px;
     margin-bottom: 20px;
   }
@@ -71,4 +70,36 @@
     flex-direction: column;
     gap: 8px;
     margin: 10px;
+  }
+
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(90, 90, 90);
+    color: white;
+    text-align: center;
+  }
+
+  .title {
+    font-size: 36px;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    color: #333;
+    background-color: #f8b776;
+    padding: 20px;
+    padding-left: 50px;
+    border-radius: 5px;
+    line-height: 1.5;
+    margin: 0;
+  }
+
+  .content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: -50px;
   }
